# oofem

./: .gitignore  .gitmodules  .justfile  CMakeLists.txt  CMakeSettings.json  README.md  uncrustify.cfg
src/aggregate/: CMakeLists.txt  aggregate.C  aggregateerror.h  box.C  box.h  disk.C  disk.h  dlim.C  dlim.h  ellipsoid.C  ellipsoid.h  fibre.C  fibre.h  grading_test.C  gradingcurve.C  gradingcurve.h  inclusion.h  intersection.C  intersection.h  intersection_test.C  placer.C  placer.h  placer_test.C  random.h  stats.C  stats.h  vtu.C  vtu.h
src/aggregate/doc/: README.md  user_manual.md
src/aggregate/tests/: .gitignore  run_test.cmake
src/aggregate/tests/2DRVE/: control.in
src/aggregate/tests/EmptyBox/: control.in
src/aggregate/tests/SmallRVE/: control.in
src/aggregate/tests/SmallRVEsphere/: control.in
src/aggregate/tests/SmallRVEvtu/: control.in
src/converter/: CMakeLists.txt  TODO.md  boundarysphere.C  boundarysphere.h  converterdatareader.h  convertererror.h  converterinputrecord.C  converterinputrecord.h  converterlistutils.h  convertertxtdatareader.C  convertertxtdatareader.h  convertertxtinputrecord.C  convertertxtinputrecord.h  curve.C  curve.h  cylinder.C  cylinder.h  disk.C  disk.h  ellipsoid.C  ellipsoid.h  fibre.C  fibre.h  grid.C  grid.h  gridcomponent.C  gridcomponent.h  gridlocalizer.h  holedisk.C  holedisk.h  inclusion.C  inclusion.h  interfacecylinder.C  interfacecylinder.h  interfacesphere.C  interfacesphere.h  line.C  line.h  lognormalGenerator.C  main.C  (+17 more)
src/converter/doc/: README.md  user_manual.md
src/converter/output/: writer.h  writerfactory.h
src/converter/tests/: .gitignore  run_test.cmake
src/converter/tests/2DNotchedBeamQhull/: control.in  mesh.voronoi  oofem.in  reference.in
src/converter/tests/2DNotchedBeamQhullTM/: control.in  oofem.in  reference.in
src/converter/tests/2DPerQhull/: control.in  mesh.nodes  mesh.voronoi  oofem.in  reference.in
src/converter/tests/2DPlate/: control.in  mesh.t3d  oofem.in
src/converter/tests/2DPlateT3D/: control.in  mesh.in  mesh.sh  oofem.in
src/converter/tests/2DRectQhull/: control.in  oofem.in  reference.in
src/converter/tests/2DRectQhullTM/: control.in  oofem.in  reference.in
src/converter/tests/2DReinfPlateT3D/: control.in  mesh.in  mesh.sh  mesh.t3d  reference.in
src/converter/tests/2DScordelis/: control.in  mesh.t3d  reference.in
src/converter/tests/2DScordelisT3D/: control.in  mesh.in  mesh.sh  oofem.in
src/converter/tests/2DSlavesideQhull/: control.in  mesh.nodes  mesh.voronoi  oofem.in
src/converter/tests/3DCantCoupledQhull/: control.in  control.smtm.in  control.tm.in  mesh.in  mesh.nodes  mesh.sh  mesh.voronoi  oofem.smtm.in  oofem.tm.in  reference.in
src/converter/tests/3DCoupledPerQhull/: control.in  control.smtm.in  control.tm.in  mesh.in  mesh.sh  oofem.in  oofem.smtm.in  oofem.tm.in
src/converter/tests/3DCylinder/: control.in  mesh.in  oofem.in  oofem.in.del.cross.pov  oofem.in.del.line.pov  oofem.in.vor.line.pov
src/converter/tests/3DCylinderQhull/: control.in  mesh.in  mesh.nodes  mesh.sh  oofem.in  random.in  reference.in
src/converter/tests/3DFPZ/: control.in  mesh.nodes  reference.in
src/converter/tests/3DFPZFibre/: control.in  reference.in
src/converter/tests/3DFPZFibreQhull/: control.in  mesh.nodes  mesh.voronoi  reference.in
src/converter/tests/3DFPZQhull/: control.in  oofem.in
src/converter/tests/3DGopShaQhull/: control.in  reference.in
src/converter/tests/3DInclusionFileQhull/: control.in  mesh.nodes  mesh.voronoi  oofem.in
src/converter/tests/3DNotchDeleteQhull/: control.in  control.nodelete.in  mesh.nodes  oofem.in  reference.in
src/converter/tests/3DNotchDeleteQhullTM/: control.in  mesh.voronoi  oofem.in
src/converter/tests/3DPerQhullTM/: control.in  oofem.in
src/converter/tests/3DPlateBendingQhull/: control.in  mesh.in  mesh.sh
src/converter/tests/3DSM/: control.in  mesh.in  mesh.nodes  oofem.in.del.cross.pov  oofem.in.del.line.pov  oofem.in.vor.cross.pov  oofem.in.vor.line.pov  reference.in
src/converter/tests/3DSMQhull/: #oofem.in#  control.in  mesh.nodes  mesh.sh  mesh.voronoi  reference.in
src/converter/tests/3DSphereQhull/: control.in  mesh.in  mesh.nodes  mesh.voronoi  oofem.in  reference.in
src/converter/tests/3DTM/: control.in  mesh.in  mesh.nodes  mesh.voronoi  oofem.in  reference.in
src/converter/tests/3DTMQhull/: control.in  mesh.voronoi  reference.in
src/converter/tests/3DTensionQhull/: control.in  mesh.voronoi  oofem.in  reference.in
src/converter/tests/3DTetraQhull/: control.in  mesh.delaunay  mesh.in  mesh.nodes  mesh.sh  mesh.voronoi  oofem.in
src/generator/: CMakeLists.txt  boundarysphere.C  boundarysphere.h  curve.C  curve.h  cylinder.C  cylinder.h  disk.C  disk.h  generatordatareader.h  generatorerror.h  generatorinputrecord.C  generatorinputrecord.h  generatorlistutils.h  generatortxtdatareader.C  generatortxtdatareader.h  generatortxtinputrecord.C  generatortxtinputrecord.h  grid.C  grid.h  gridcomponent.C  gridcomponent.h  gridlocalizer.C  gridlocalizer.h  gridtype.h  holedisk.C  holedisk.h  inclusion.C  inclusion.h  inputrecord.C  interfacecylinder.C  interfacecylinder.h  interfacedisk.C  interfacedisk.h  interfaceplane.C  interfaceplane.h  interfacesphere.C  interfacesphere.h  interfacesurface.C  interfacesurface.h  (+26 more)
src/generator/doc/: README.md  user_manual.md
src/generator/tests/: .gitignore  run_test.cmake
src/generator/tests/2DInclusion/: mesh.in  reference.nodes
src/generator/tests/2DInclusionFile/: mesh.in  reference.nodes
src/generator/tests/2DNotch/: mesh.in  reference.nodes
src/generator/tests/2DNotchedBeamQhull/: mesh.in
src/generator/tests/2DNotchedBeamQhullTM/: mesh.in
src/generator/tests/2DPerQhull/: mesh.in  reference.nodes
src/generator/tests/2DRect/: mesh.in
src/generator/tests/2DRectQhull/: mesh.in
src/generator/tests/2DRectQhullTM/: mesh.in
src/generator/tests/3DCantCoupledQhull/: mesh.in
src/generator/tests/3DCoupledPerQhull/: mesh.in
src/generator/tests/3DCylinderQhull/: mesh.in  reference.nodes
src/generator/tests/3DFPZQhull/: mesh.in
(+1159 files in other folders)
